<resources>
    <string name="app_name">Find4Sport</string>
    <string name="img_splash_description">Logo</string>
    <string name="btnLoginEntrar">Entrar</string>
    <string name="btnLoginFacebook">Iniciar Sesion con Facebook</string>
    <string name="btnLoginGoogle">Iniciar Sesion con Google</string>
    <string name="cdLoginLogo">Logo App</string>
    <string name="etPasswordLogin">Contraseña</string>
    <string name="etUsuarioLogin">Usuario</string>
    <string name="tv_registro_login">¿No estás registrado? ¡Pulsa aquí!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_planing_quedadas">Quedadas</string>
    <string name="BuscarAmigos">Buscar Amigos</string>
</resources>
